fixed css. acting up on firefox

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9645,3 +9645,7 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child::before, tabl
 .search-input-icon {
   display: inline-block;
   position: relative; }
+
+p {
+  color: black;
+}
